# Ai_Chat_SDK

./: README.en.md  README.md
AIModelAccess/ChatServer/: CMakeLists.txt  ChatServer.cpp  ChatServer.h  main.cpp
AIModelAccess/sdk/: CMakeLists.txt
AIModelAccess/sdk/include/: ChatGPTProvider.h  ChatSDK.h  DataManager.h  DeepSeekProvider.h  GeminiProvider.h  LLMManager.h  LLMProvider.h  OllamaProvider.h  SessionManager.h  common.h
AIModelAccess/sdk/include/util/: myLog.h
AIModelAccess/sdk/src/: ChatGPTProvider.cpp  ChatSDK.cpp  DataManager.cpp  DeepSeekProvider.cpp  GeminiProvider.cpp  LLMManager.cpp  OllamaProvider.cpp  SessionManager.cpp
AIModelAccess/sdk/src/util/: myLog.cpp
AIModelAccess/test/: CMakeLists.txt  testLLM.cpp
AIModelAccess/test/sqlite-test/: studentDB.db  testSqlite3.cpp  testsqlite
docs/diagrams/: class-architecture.puml
